# wasm-hogeweb

./: Cargo.toml
src/: asset.rs  httpservice.rs  main.rs
www/: index.html
