[package]
name = "hogeweb"
version = "0.1.0"
authors = ["Tetsuya Takatsuru <tetsuya@taka2ru.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "5.2"
rusqlite = "0.21"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
